# restaurant-platform

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEBASE_INDEX.md  Makefile  README.md
ai/: pyproject.toml
ai/src/embeddings/: generator.py
ai/src/gateway/: client.py
ai/src/models/: sentiment_classifier.py
backend/: .env.example  .importlinter  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_bootstrap.py  0002_identity_users_restaurants.py  0003_menus_module.py  0004_orders_module.py  0004_tables_module.py  0005_payments_deliveries.py  0006_menu_search_index.py  0007_modifier_groups.py  0008_reviews_module.py  0009_promotions_module.py  0010_analytics_module.py  0011_vector_and_menu_item_embeddings.py  50248ed5a80a_alter_menu_item_image_url_to_text.py
backend/scripts/: seed_admin.py  seed_data.py
backend/src/app/: config.py  dependencies.py  main.py  observability.py  recommendations_routes.py  settings_routes.py
backend/src/app/adapters/: menu_service_adapter.py
backend/src/modules/analytics/api/: ai_routes.py  dependencies.py  recommendations_routes.py  routes.py  schemas.py
backend/src/modules/analytics/application/ports/: analytics_repository.py
backend/src/modules/analytics/application/queries/: get_platform_dashboard.py  get_restaurant_dashboard.py  get_revenue_breakdown.py
backend/src/modules/analytics/domain/entities/: analytics_snapshot.py
backend/src/modules/analytics/domain/value_objects/: metric_type.py  time_range.py
backend/src/modules/analytics/infrastructure/repositories/: sqlalchemy_analytics_repository.py
backend/src/modules/deliveries/: event_handlers.py
backend/src/modules/deliveries/api/: dependencies.py  routes.py  schemas.py
backend/src/modules/deliveries/application/commands/: accept_assignment.py  assign_partner.py  create_delivery.py  register_partner.py  toggle_partner_availability.py  toggle_partner_online.py  update_delivery_status.py  update_partner_location.py
backend/src/modules/deliveries/application/ports/: delivery_repository.py  location_cache.py  partner_repository.py
backend/src/modules/deliveries/application/queries/: get_delivery.py  get_partner_location.py  list_partner_deliveries.py
backend/src/modules/deliveries/domain/entities/: delivery.py  delivery_partner.py
backend/src/modules/deliveries/domain/events/: delivery_events.py
backend/src/modules/deliveries/domain/value_objects/: delivery_status.py  location.py  vehicle_type.py
backend/src/modules/deliveries/infrastructure/models/: delivery_models.py
backend/src/modules/deliveries/infrastructure/repositories/: redis_location_cache.py  sqlalchemy_delivery_repository.py  sqlalchemy_partner_repository.py
backend/src/modules/identity/api/: dependencies.py  routes.py  schemas.py
backend/src/modules/identity/application/commands/: change_password.py  forgot_password.py  login.py  refresh_token.py  register_account.py  reset_password.py  verify_email.py
backend/src/modules/identity/application/ports/: account_repository.py  email_sender.py  password_hasher.py  token_service.py
backend/src/modules/identity/application/queries/: get_account.py
backend/src/modules/identity/domain/entities/: account.py
backend/src/modules/menus/api/: dependencies.py  routes.py
backend/src/modules/notifications/: event_handlers.py
backend/src/modules/notifications/api/: dependencies.py  routes.py
backend/src/modules/orders/: event_handlers.py
backend/src/modules/orders/api/: dependencies.py  routes.py  schemas.py
backend/src/modules/payments/: event_handlers.py
backend/src/modules/payments/api/: dependencies.py  routes.py  schemas.py
backend/src/modules/promotions/api/: dependencies.py  routes.py  schemas.py
backend/src/modules/restaurants/: startup.py
backend/src/modules/restaurants/api/: dependencies.py  routes.py  schemas.py
backend/src/modules/reviews/: event_handlers.py
backend/src/modules/reviews/api/: dependencies.py  routes.py  schemas.py
backend/src/modules/tables/api/: dependencies.py  routes.py  websockets.py
backend/src/modules/tables/domain/: exceptions.py
backend/src/modules/users/: event_handlers.py
backend/src/modules/users/api/: dependencies.py  routes.py  schemas.py
backend/src/shared/api/: errors.py  pagination.py  response.py  security.py  websockets.py
backend/src/shared/api/middleware/: cors.py  request_id.py
backend/src/shared/application/ports/: event_subscriber.py  unit_of_work.py
backend/src/shared/domain/: entity.py  events.py  exceptions.py  value_objects.py
backend/src/shared/infrastructure/: database.py  event_bus.py  outbox.py  redis.py  unit_of_work.py
backend/src/workers/: celery_app.py
backend/src/workers/schedules/: __init__.py
backend/src/workers/tasks/: __init__.py  embedding_tasks.py  notification_tasks.py
backend/tests/: conftest.py
backend/tests/architecture/: test_import_boundaries.py
backend/tests/integration/: conftest.py
backend/tests/integration/modules/identity/: test_auth_flow.py
backend/tests/integration/modules/orders/: test_orders_flow.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_ai_features.py  test_sample_unit.py
backend/tests/unit/modules/analytics/: test_analytics.py
backend/tests/unit/modules/deliveries/: test_deliveries.py
backend/tests/unit/modules/identity/: test_commands.py  test_domain.py
backend/tests/unit/modules/menus/: test_commands.py  test_domain.py
backend/tests/unit/modules/notifications/: test_notifications.py
backend/tests/unit/modules/orders/: test_commands.py  test_domain.py
backend/tests/unit/modules/payments/: test_payments.py
backend/tests/unit/modules/promotions/: test_promotions.py
backend/tests/unit/modules/restaurants/: test_commands.py  test_domain.py
backend/tests/unit/modules/reviews/: test_reviews.py
backend/tests/unit/modules/tables/: test_availability_service.py  test_domain.py
backend/tests/unit/modules/users/: test_commands.py  test_domain.py
(+483 files in other folders)
