[project]
name = "restaurant-platform-backend"
version = "0.1.0"
description = "AI-Powered Multi-Vendor Restaurant Ordering Platform — Backend"
requires-python = ">=3.13"

dependencies = [
    # Web Framework
    "fastapi[standard]>=0.137",
    "uvicorn[standard]>=0.49",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31",
    "alembic>=1.18",

    # Redis / Valkey
    "redis[hiredis]>=5.2",

    # Background Processing
    "celery[redis]>=5.6",

    # Auth
    "pyjwt[crypto]>=2.13",
    "bcrypt>=5.0",

    # Validation
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "email-validator>=2.2",

    # Observability
    "opentelemetry-api>=1.42",
    "opentelemetry-sdk>=1.42",
    "opentelemetry-instrumentation-fastapi>=0.50",
    "opentelemetry-instrumentation-sqlalchemy>=0.50",
    "opentelemetry-instrumentation-redis>=0.50",
    "opentelemetry-instrumentation-celery>=0.50",
    "opentelemetry-exporter-otlp>=1.42",
    "structlog>=26.1",

    # AWS
    "boto3>=1.43",

    # Utilities
    "httpx2>=2.0",
    "orjson>=3.11",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "factory-boy>=3.3",
    "faker>=33.0",
    "httpx2>=2.0",

    # Code Quality
    "ruff>=0.15",
    "mypy>=2.1",
    "import-linter>=2.7",
    "pre-commit>=4.0",

    # Database Testing
    "testcontainers[postgres,redis]>=4.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
preview = true
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4",
    "DTZ", "T10", "ISC", "ICN", "PIE", "PT", "RSE", "RET",
    "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL",
    "TRY", "FLY", "PERF", "RUF",
]
ignore = ["S101", "TRY003"]

[tool.ruff.lint.isort]
known-first-party = ["app", "modules", "shared", "workers"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require database/redis)",
    "e2e: End-to-end tests",
    "architecture: Architecture boundary tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
